feat: stick header
Added feature to header to make it sticky at top

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- Heading -->
-    <header>
+    <header class="sticky-top">
         <h1>Rock Paper Scissors </h1>
     </header>
     <div class="container"></div>
@@ -53,10 +53,7 @@
         <p id="action-message">Make Your Move.</p>
     </div>
     <!-- Reset button -->
-    <div id="reset-button"><button class="reset button">Restart</button></div>
-    </div>
-
-
+    <button id="reset-button" type="button" class="btn btn-secondary btn-lg btn-block p-2">Restart the Game</button>
 
     <script src="script.js" charset="utf-8"></script>
 </body>
