fix : position of restart

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div>
         <p id="action-message">Make Your Move.</p>
         <!-- Reset button -->
-        <button id="reset-button" type="button" class="btn btn-secondary btn-lg btn-block p-2 sticky-bottom">Restart the
+        <button id="reset-button" type="button" class="btn btn-secondary btn-lg btn-block  sticky-bottom">Restart the
             Game</button>
     </div>
     <footer class="foot">
